--- a/instruct.html
+++ b/instruct.html
@@ -4,17 +4,17 @@ Instructions for using our Attendy app.
 
 We generate a weekly code using this website. :)
 
-<form action="/action_page.php">
+What do you want the code to be?
+
+<form action="/qr_code.php">
   Weekly code:<br>
   <input type="text"><br>
   <input type="submit" value="Submit">
 </form>
 
-What do you want the code to be?
 
-
-Students should download a QR Reading app to use our solution.
-The QR code helps them send an email with their name as the subject.
+Students must download a QR Code Reading app to use our solution.
+The QR code helps them send an email with their name as the subject and the secret weekly code as the message.
 
 This spreadsheet tracks all attendance: <a href='https://docs.google.com/spreadsheets/d/11_kqC3xLnkT3evQBfSx_L7TmtgzeszhXTkMx8hyZRxg/edit?usp=sharing'>Attendance</a>
-The spreadsheet automatically records responses between 2 - 3 on Tuesdays.
+It automatically records responses between 2 - 3 on Tuesdays.
