Update and rename instruct.md to instruct.html

--- a/instruct.html
+++ b/instruct.html
@@ -1,5 +1,8 @@
-## Welcome to Tech Firm Leadership
-
+---
+layout: minimalist
+title: Instructions
+permalink: /instruct/
+---
 Instructions for using our Attendy app.
 
 We generate a weekly code using this website. :)
