--- a/instruct.html
+++ b/instruct.html
@@ -1,8 +1,7 @@
 ---
-layout: minimalist
-title: Instructions
-permalink: /instruct/
+theme: jekyll-theme-minimal
 ---
+
 Instructions for using our Attendy app.
 
 We generate a weekly code using this website. :)
@@ -14,7 +13,6 @@ What do you want the code to be?
   <input type="text"><br>
   <input type="submit" value="Submit">
 </form>
-
 
 Students must download a QR Code Reading app to use our solution.
 The QR code helps them send an email with their name as the subject and the secret weekly code as the message.
