--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
-## Welcome to Tech Firm Leadership
+## Welcome to Tech Firm Leadership 
 
 For instructors, what do you want the weekly code to be?
 
 
-<form onsubmit="return doSomething();" class="my-form">
+<form onsubmit="return doSomething();">
     <input type="text" name="qr">
     <input type="submit">
 </form>
@@ -28,6 +28,6 @@ That's it, happy checking in! :)
 </html>
 <script>
 function doSomething() {
-    document.getElementById('qr_code').src='https://chart.googleapis.com/chart?      cht=qr&chl=MATMSG%3ATO%3Aieor171.berkeley%40gmail.com%3BSUB%3A%3BBODY%3A' + qr + '%3B%3B&chs=180x180&choe=UTF-8&chld=L|2';
+    document.getElementById('qr_code').src='https://chart.googleapis.com/chart?cht=qr&chl=MATMSG%3ATO%3Aieor171.berkeley%40gmail.com%3BSUB%3A%3BBODY%3A' + qr + '%3B%3B&chs=180x180&choe=UTF-8&chld=L|2';
 }
 </script>
