--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
 For instructors, what do you want the weekly code to be?
 
 
-<form onsubmit="return doSomething();">
+<form onsubmit="doSomething();">
     <input type="text" name="qr">
     <input type="submit">
 </form>
 
 
-Code of the day:
+Code of the day: <br>
 
 <img id='qr_code' src='https://chart.googleapis.com/chart?cht=qr&chl=MATMSG%3ATO%3Aieor171.berkeley%40gmail.com%3BSUB%3A%3BBODY%3AWEEK7%3B%3B&chs=180x180&choe=UTF-8&chld=L|2' rel='nofollow' alt='qr code' align="middle"><a href='http://www.qrcode-generator.de' border='0' style='cursor:default'  rel='nofollow'></a>
 
-Please display this code for students to scan and check in.
+Please display this code for students to scan and check in. <br>
 
-This spreadsheet automatically tracks all attendance: <a href='https://docs.google.com/spreadsheets/d/11_kqC3xLnkT3evQBfSx_L7TmtgzeszhXTkMx8hyZRxg/edit?usp=sharing'>Attendance</a>
+This spreadsheet automatically tracks all attendance: <a href='https://docs.google.com/spreadsheets/d/11_kqC3xLnkT3evQBfSx_L7TmtgzeszhXTkMx8hyZRxg/edit?usp=sharing'>Attendance</a><br>
 
 
-For students, 
-1) Download the QR Reading app from the app store.
-2) Scan the QR code.
-3) Send the email with your name as the subject, but please don't change the message.
+For students, <br>
+1) Download the QR Reading app from the app store. <br>
+2) Scan the QR code.<br>
+3) Send the email with your name as the subject, but please don't change the message.<br>
 
 That's it, happy checking in! :)
 </html>
