--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@ That's it, happy checking in! :)
 <script>
 function doSomething() {
     document.getElementById('qr_code').src='https://chart.googleapis.com/chart?cht=qr&chl=MATMSG%3ATO%3Aieor171.berkeley%40gmail.com%3BSUB%3A%3BBODY%3A' + qr + '%3B%3B&chs=180x180&choe=UTF-8&chld=L|2';
+    location.reload();
 }
 </script>
