--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 ## Welcome to Tech Firm Leadership 
 
-For instructors, what do you want the weekly code to be?
+For instructors, what do you want the weekly code to be? 
 
 
 <form onsubmit="doSomething();">
@@ -12,7 +12,8 @@ For instructors, what do you want the weekly code to be?
 
 Code of the day: <br>
 
-<img id='qr_code' src='https://chart.googleapis.com/chart?cht=qr&chl=MATMSG%3ATO%3Aieor171.berkeley%40gmail.com%3BSUB%3A%3BBODY%3AWEEK7%3B%3B&chs=180x180&choe=UTF-8&chld=L|2' rel='nofollow' alt='qr code' align="middle"><a href='http://www.qrcode-generator.de' border='0' style='cursor:default'  rel='nofollow'></a>
+<img id="qr_code" src="https://chart.googleapis.com/chart?cht=qr&chl=MATMSG%3ATO%3Aieor171.berkeley%40gmail.com%3BSUB%3A%3BBODY%3AWEEK7%3B%3B&chs=180x180&choe=UTF-8&chld=L|2" 
+rel='nofollow' alt='qr code' align="middle"><a href='http://www.qrcode-generator.de' border='0' style='cursor:default'  rel='nofollow'></a>
 
 Please display this code for students to scan and check in. <br>
 
@@ -28,7 +29,8 @@ That's it, happy checking in! :)
 </html>
 <script>
 function doSomething() {
-    document.getElementById('qr_code').src='https://chart.googleapis.com/chart?cht=qr&chl=MATMSG%3ATO%3Aieor171.berkeley%40gmail.com%3BSUB%3A%3BBODY%3A' + qr + '%3B%3B&chs=180x180&choe=UTF-8&chld=L|2';
+    document.getElementById("qr_code").src="https://chart.googleapis.com/chart?cht=qr&chl=MATMSG%3ATO%3Aieor171.berkeley%40gmail.com%3BSUB%3A%3BBODY%3A" + qr +
+        "%3B%3B&chs=180x180&choe=UTF-8&chld=L|2";
     location.reload();
 }
 </script>
