--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@ For instructors, what do you want the weekly code to be?
 
 Code of the day: <br>
 
-<img id="qr_code" src="https://chart.googleapis.com/chart?cht=qr&chl=MATMSG%3ATO%3Aieor171.berkeley%40gmail.com%3BSUB%3A%3BBODY%3AWEEK7%3B%3B&chs=180x180&choe=UTF-8&chld=L|2" 
+<div id="qr_code">
+<img src="https://chart.googleapis.com/chart?cht=qr&chl=MATMSG%3ATO%3Aieor171.berkeley%40gmail.com%3BSUB%3A%3BBODY%3AWEEK7%3B%3B&chs=180x180&choe=UTF-8&chld=L|2" 
 rel='nofollow' alt='qr code' align="middle"><a href='http://www.qrcode-generator.de' border='0' style='cursor:default'  rel='nofollow'></a>
-
+    </div>
 Please display this code for students to scan and check in. <br>
 
 This spreadsheet automatically tracks all attendance: <a href='https://docs.google.com/spreadsheets/d/11_kqC3xLnkT3evQBfSx_L7TmtgzeszhXTkMx8hyZRxg/edit?usp=sharing'>Attendance</a><br>
@@ -29,8 +30,10 @@ That's it, happy checking in! :)
 </html>
 <script>
 function doSomething() {
-    document.getElementById("qr_code").src="https://chart.googleapis.com/chart?cht=qr&chl=MATMSG%3ATO%3Aieor171.berkeley%40gmail.com%3BSUB%3A%3BBODY%3A" + qr +
-        "%3B%3B&chs=180x180&choe=UTF-8&chld=L|2";
+    document.getElementById('foo').innerHTML = 
+    <img id="qr_code" src="https://chart.googleapis.com/chart?cht=qr&chl=MATMSG%3ATO%3Aieor171.berkeley%40gmail.com%3BSUB%3A%3BBODY%3A" + qr +
+        "%3B%3B&chs=180x180&choe=UTF-8&chld=L|2"
+rel='nofollow' alt='qr code' align="middle"><a href='http://www.qrcode-generator.de' border='0' style='cursor:default'  rel='nofollow'></a>
     location.reload();
 }
 </script>
