--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@ That's it, happy checking in! :)
 <script>
 function doSomething() {
     document.getElementById("qr_code").innerHTML = 
-    <img id="qr_code" src="https://chart.googleapis.com/chart?cht=qr&chl=MATMSG%3ATO%3Aieor171.berkeley%40gmail.com%3BSUB%3A%3BBODY%3A" + qr +
-        "%3B%3B&chs=180x180&choe=UTF-8&chld=L|2"
-rel='nofollow' alt='qr code' align="middle"><a href='http://www.qrcode-generator.de' border='0' style='cursor:default'  rel='nofollow'></a>
+    '<img id="qr_code" src="https://chart.googleapis.com/chart?cht=qr&chl=MATMSG%3ATO%3Aieor171.berkeley%40gmail.com%3BSUB%3A%3BBODY%3A" + qr +
+        "%3B%3B&chs=180x180&choe=UTF-8&chld=L|2" rel='nofollow' alt='qr code' align="middle"><a href='http://www.qrcode-generator.de' border='0' style='cursor:default'  rel='nofollow'></a>';
     location.reload();
 }
 </script>
