--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 For instructors, what do you want the weekly code to be? 
 
 
-<form onsubmit="doSomething();">
+<form onsubmit="this.doSomething();">
     <input type="text" name="qr">
     <input type="submit">
 </form>
